complete revicison for arrays hard problems